start to support new proxy routes
