# src/main/resources/swagger/api-docs.yaml
@@ -456,15 +456,15 @@ paths:
           schema:
             $ref: '#/definitions/ErrorReport'
 
-  '/notebooks/{googleProject}/{clusterName}':
+  '/proxy/{googleProject}/{clusterName}/{clusterTool}':
     get:
-      summary: Access Jupyter notebooks on a Dataproc cluster
+      summary: Access the specified tool on a Dataproc cluster
       description: |
         This URI supports all HTTP methods, not just GET as implied by this Swagger.
-        Proxies all requests through to the Jupyter notebook server running on the given cluster.
+        Proxies all requests through to the tool server running on the given cluster.
       operationId: proxyCluster
       tags:
-        - notebooks
+        - proxy
       parameters:
         - in: path
           name: googleProject
@@ -474,6 +474,11 @@ paths:
         - in: path
           name: clusterName
           description: clusterName
+          required: true
+          type: string
+        - in: path
+          name: clusterTool
+          description: clusterTool
           required: true
           type: string
       responses:
